--- a/nifi-stardog-nar/pom.xml
+++ b/nifi-stardog-nar/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>nifi-stardog-processors</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.complexible.stardog</groupId>
+            <artifactId>client-http</artifactId>
+            <version>${stardog.version}</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
 
 </project>
