--- a/nifi-stardog-processors/pom.xml
+++ b/nifi-stardog-processors/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>com.stardog</groupId>
         <artifactId>stardog</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.1.0</version>
     </parent>
 
     <artifactId>nifi-stardog-processors</artifactId>
@@ -83,4 +83,8 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+  <scm>
+    <tag>0.1.0</tag>
+  </scm>
 </project>
