--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
     <groupId>com.stardog</groupId>
     <artifactId>stardog</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -54,4 +54,8 @@
             </plugin>
         </plugins>
     </build>
+
+  <scm>
+    <tag>0.1.0</tag>
+  </scm>
 </project>
