--- a/nifi-stardog-nar/pom.xml
+++ b/nifi-stardog-nar/pom.xml
@@ -19,11 +19,11 @@
     <parent>
         <groupId>com.stardog</groupId>
         <artifactId>stardog</artifactId>
-        <version>0.1.0</version>
+        <version>0.1.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>nifi-stardog-nar</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.1-SNAPSHOT</version>
     <packaging>nar</packaging>
     <properties>
         <maven.javadoc.skip>true</maven.javadoc.skip>
@@ -34,12 +34,7 @@
         <dependency>
             <groupId>com.stardog</groupId>
             <artifactId>nifi-stardog-processors</artifactId>
-            <version>0.1.0</version>
+            <version>0.1.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
-
-
-  <scm>
-    <tag>0.1.0</tag>
-  </scm>
 </project>
