--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
     <groupId>com.stardog</groupId>
     <artifactId>stardog</artifactId>
-    <version>0.1.2</version>
+    <version>0.1.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -54,8 +54,4 @@
             </plugin>
         </plugins>
     </build>
-
-  <scm>
-    <tag>0.1.2</tag>
-  </scm>
 </project>
