--- a/nifi-stardog-services-nar/pom.xml
+++ b/nifi-stardog-services-nar/pom.xml
@@ -8,8 +8,13 @@
         <version>0.1.3-SNAPSHOT</version>
     </parent>
 
-    <artifactId>nifi-stardog-nar</artifactId>
+    <artifactId>nifi-stardog-services-nar</artifactId>
     <packaging>nar</packaging>
+
+    <properties>
+        <maven.javadoc.skip>true</maven.javadoc.skip>
+        <source.skip>true</source.skip>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -20,7 +25,7 @@
         </dependency>
         <dependency>
             <groupId>com.stardog</groupId>
-            <artifactId>nifi-stardog-processors</artifactId>
+            <artifactId>nifi-stardog-services</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
