--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  Licensed to the Apache Software Foundation (ASF) under one or more
-  contributor license agreements. See the NOTICE file distributed with
-  this work for additional information regarding copyright ownership.
-  The ASF licenses this file to You under the Apache License, Version 2.0
-  (the "License"); you may not use this file except in compliance with
-  the License. You may obtain a copy of the License at
-  http://www.apache.org/licenses/LICENSE-2.0
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
--->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -23,11 +9,20 @@
     </parent>
 
     <groupId>com.stardog</groupId>
-    <artifactId>stardog</artifactId>
+    <artifactId>nifi-stardog-bundle</artifactId>
     <version>0.1.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <properties>
+        <nifi.version>1.11.3</nifi.version>
+        <stardog.version>7.3.0</stardog.version>
+    </properties>
+
     <modules>
+        <module>nifi-stardog-connection-service-api</module>
+        <module>nifi-stardog-connection-service-api-nar</module>
+        <module>nifi-stardog-services</module>
+        <module>nifi-stardog-services-nar</module>
         <module>nifi-stardog-processors</module>
         <module>nifi-stardog-nar</module>
     </modules>
@@ -54,4 +49,11 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>stardog-public</id>
+            <url>https://maven.stardog.com</url>
+        </repository>
+    </repositories>
 </project>
