--- a/nifi-stardog-connection-service-api/pom.xml
+++ b/nifi-stardog-connection-service-api/pom.xml
@@ -20,7 +20,7 @@
 		<dependency>
 			<groupId>org.apache.nifi</groupId>
 			<artifactId>nifi-utils</artifactId>
-			<version>1.12.0-SNAPSHOT</version>
+			<version>${nifi.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.complexible.stardog</groupId>
