--- a/nifi-stardog-connection-service-api-nar/pom.xml
+++ b/nifi-stardog-connection-service-api-nar/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.stardog</groupId>
 		<artifactId>nifi-stardog-bundle</artifactId>
-		<version>0.2.0</version>
+		<version>0.2.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>nifi-stardog-connection-service-api-nar</artifactId>
@@ -22,6 +22,7 @@
 			<groupId>com.stardog</groupId>
 			<artifactId>nifi-stardog-connection-service-api</artifactId>
 			<version>${project.version}</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 </project>
