--- a/nifi-stardog-services-nar/pom.xml
+++ b/nifi-stardog-services-nar/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.stardog</groupId>
         <artifactId>nifi-stardog-bundle</artifactId>
-        <version>0.2.0</version>
+        <version>0.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>nifi-stardog-services-nar</artifactId>
