--- a/nifi-stardog-services/pom.xml
+++ b/nifi-stardog-services/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.stardog</groupId>
 		<artifactId>nifi-stardog-bundle</artifactId>
-		<version>0.2.0</version>
+		<version>0.2.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>nifi-stardog-services</artifactId>
@@ -21,13 +21,9 @@
 			<groupId>com.stardog</groupId>
 			<artifactId>nifi-stardog-connection-service-api</artifactId>
 			<version>${project.version}</version>
+			<scope>compile</scope>
 		</dependency>
-		<dependency>
-			<groupId>com.complexible.stardog</groupId>
-			<artifactId>client-http</artifactId>
-			<version>${stardog.version}</version>
-			<type>pom</type>
-		</dependency>
+
 		<dependency>
 			<groupId>org.apache.nifi</groupId>
 			<artifactId>nifi-mock</artifactId>
