--- a/nifi-stardog-connection-service-api/pom.xml
+++ b/nifi-stardog-connection-service-api/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.stardog</groupId>
 		<artifactId>nifi-stardog-bundle</artifactId>
-		<version>0.2.1-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<artifactId>nifi-stardog-connection-service-api</artifactId>
