--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.stardog</groupId>
     <artifactId>nifi-stardog-bundle</artifactId>
-    <version>0.2.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
 
     <properties>
