--- a/nifi-stardog-processors/pom.xml
+++ b/nifi-stardog-processors/pom.xml
@@ -36,6 +36,11 @@
 			<version>${nifi.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.nifi</groupId>
+			<artifactId>nifi-kerberos-credentials-service-api</artifactId>
+			<version>${nifi.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.stardog</groupId>
 			<artifactId>nifi-stardog-connection-service-api</artifactId>
 			<version>${project.version}</version>
@@ -62,6 +67,12 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>java-hamcrest</artifactId>
+			<version>2.0.0.0</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
