--- a/nifi-stardog-processors/pom.xml
+++ b/nifi-stardog-processors/pom.xml
@@ -58,6 +58,12 @@
 			<artifactId>nifi-mock</artifactId>
 			<version>${nifi.version}</version>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>net.minidev</groupId>
+					<artifactId>json-smart</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
