--- a/nifi-stardog-connection-service-api-nar/pom.xml
+++ b/nifi-stardog-connection-service-api-nar/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.stardog</groupId>
 		<artifactId>nifi-stardog-bundle</artifactId>
-		<version>2.0.0</version>
+		<version>${revision}</version>
 	</parent>
 
 	<artifactId>nifi-stardog-connection-service-api-nar</artifactId>
